History of this buildout
========================

5.0.15 (unreleased)
-------------------

- Nothing changed yet.


5.0.14 (2013-06-21)
-------------------

- Fix dynamic sorting and filtering in search form.
  [maurits]

- Fix display of location in meeting.
  [maurits]


5.0.13 (2013-06-18)
-------------------

- Added Plone Security hotfix 1.0.
  [maurits]


5.0.12 (2013-06-18)
-------------------

- Use new, internal Products.TinyMCE 1.3.4.zest.1.
  This is the code from the current master branch.
  [maurits]


5.0.11 (2013-06-14)
-------------------

- css: load the portal header.jpg from the context.
  [maurits]

- Add upgrade step to cook the resources.
  [maurits]

- Avoid double underlines in listing of newsletter.
  'li.newsitemslist a' got an underline, but '#content a:link'
  already got a bottom border.
  [maurits]

- Register document actions viewlet above the content title.
  Float them to the right.
  [maurits]

- Fix newsitem_view by making it a browser view.
  The title was shown twice when viewing it.
  [maurits]

- Removed tabsDropMenu.js which gave an error but was not used.
  Removed unused global_menu.pt and global_sections.pt.
  [maurits]


5.0.10 (2013-05-28)
-------------------

- Disallow adding anything directly to the existing Digibib.
  [maurits]


5.0.9 (2013-05-16)
------------------

- Various improvements to styling, viewlets, migration document.
  [maurits]


5.0.8 (2013-05-08)
------------------

- Added upgrade step to restore a normal MailHost.
  [maurits]


5.0.7 (2013-04-22)
------------------

- Cleanup PLONE4-UPGRADE-NOTES.txt.
  [maurits]


5.0.6 (2013-04-18)
------------------

- Completely refuse to send an email when an email has already been
  sent for a context.  A reset is required.
  [maurits]

- Allow resetting the emailSent time when half an hour has passed.
  [maurits]

- Update find-links to Plone release 4.2.4 & thirdparty on dist.plone.org
  [fred]
  