@@ -76,10 +76,9 @@
         <tal:block tal:repeat="attachment view/get_attachments">
           <hr />
           <h2>Bijlage <span tal:content="repeat/attachment/number" /></h2>
-            <tal:block tal:define="extra_schema python: view.get_attachment_extra_fields(attachment)"
-                       tal:repeat="fieldName view/attachment_fields">
+            <tal:block tal:repeat="fieldName view/attachment_fields">
               <tal:block tal:define="here nocall: attachment;
-                                     field python: attachment.schema.get(fieldName, None) or extra_schema.get(fieldName);"
+                                     field python: attachment.Schema().get(fieldName);"
                          tal:condition="nocall: field">
                 <tal:block tal:define="accessor python: field and field.getAccessor(attachment);
                                        errors view/errors;
